[gd_scene load_steps=10 format=3 uid="uid://d8x8x8x8x8x8"]

[ext_resource type="Script" uid="uid://c180imb02lygq" path="res://src/scripts/controller/player/Player.gd" id="1_0x8x8"]
[ext_resource type="Texture2D" uid="uid://btse436qjixgh" path="res://assets/sprites/player/player.png" id="2_0x8x8"]
[ext_resource type="Script" uid="uid://7brb2i8n6jb8" path="res://src/scripts/model/player/MovementComponent.gd" id="3_0x8x8"]
[ext_resource type="Script" uid="uid://cihq180lfsdmp" path="res://src/scripts/model/player/HealthComponent.gd" id="4_0x8x8"]
[ext_resource type="Script" uid="uid://c4tqocx6ewp60" path="res://src/scripts/model/player/PickupMagnet.gd" id="5_0x8x8"]
[ext_resource type="Script" uid="uid://c5fatw6vs3lvy" path="res://src/scripts/controller/player/WeaponManager.gd" id="6_0x8x8"]
[ext_resource type="Texture2D" path="res://assets/sprites/Weapons/mouse aim.png" id="7_crosshair"]
[ext_resource type="Script" path="res://src/scripts/controller/player/MouseCrosshair.gd" id="8_crosshair"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4inp7"]
size = Vector2(32, 32)

[node name="Player" type="CharacterBody2D" groups=["player"]]
script = ExtResource("1_0x8x8")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_0x8x8")
scale = Vector2(0.25, 0.25)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_4inp7")

[node name="AimPivot" type="Node2D" parent="."]

[node name="WeaponSocket" type="Sprite2D" parent="AimPivot"]
position = Vector2(8, 0)

[node name="Muzzle" type="Marker2D" parent="AimPivot/WeaponSocket"]
position = Vector2(10, 0)

[node name="MovementComponent" type="Node" parent="."]
script = ExtResource("3_0x8x8")

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("4_0x8x8")

[node name="PickupMagnet" type="Area2D" parent="."]
script = ExtResource("5_0x8x8")

[node name="WeaponManager" type="Node" parent="."]
script = ExtResource("6_0x8x8")

[node name="MouseCrosshair" type="Sprite2D" parent="."]
z_index = 200
texture = ExtResource("7_crosshair")
script = ExtResource("8_crosshair")
